upto JS of main & login page

--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@ body {
 }
 /* end of common styles */
 
+/* ********************************************** */
 /* main page */
 .main-page {
     width: 100%;
     height: 100vh;
-    display: none;
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr min-content;
 }
@@ -165,6 +166,7 @@ body {
 /* end of footer */
 /* end of main page */
 
+/* ********************************************** */
 /* login page */
 .login-page {
     width: 100%;
@@ -181,6 +183,7 @@ body {
     background-color: #fff;
     padding: 2.5rem 0;
     box-shadow: 0 0 0.7rem rgba(0, 0, 0, 0.3);
+    z-index: 1;
 }
 .login-page-nav ul { 
     width: 100rem;
@@ -305,12 +308,44 @@ body {
     color: #1aa1f5;
 }
 /* end of login */
+
+/* login modal */
+.login-modal {
+    position: fixed;
+    top: 11.5rem;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: #fff;
+    width: 70rem;
+    padding: 2rem;
+    text-align: center;
+    box-shadow: 0 0 0.7rem rgba(0,0,0,0.3);
+    border-radius: 0 0 1rem 1rem;
+    display: none;
+}
+.login-modal i {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    font-size: 1.3rem;
+    color: #868383;
+    cursor: pointer;
+}
+.login-modal p {
+    margin: 2rem 1rem 0 1rem;
+    font-size: 1.6rem;
+    color: #868683;
+}
+
+/* end of login modal */
 /* end of login page */
 
+/* ********************************************** */
 /* feeds page */
 .feeds-page {
     width: 100%;
     height: 100vh;
+    display: none;
 }
 /* feeds nav */
 .feeds-nav {
@@ -360,7 +395,6 @@ body {
     left: 1.5rem;
     color: #9e9a9a;
 }
-
 .user {
     margin-left: 3rem;
     display: flex;
@@ -388,7 +422,6 @@ body {
     font-size: 1.6rem;
 }
 /* end of feeds nav */
-
 /* feeds content */
 .feeds-content {
     display: grid;
@@ -489,7 +522,6 @@ body {
     font-size: 1.6rem;
     margin-bottom: 1rem;
 }
-
 .post-img {
     width: 48rem;
     height: 30rem;
@@ -508,7 +540,6 @@ body {
     margin-right: 6rem;
     color: #868686;
 }
-
 .follow {
     position: fixed;
     top: 8rem;
@@ -576,8 +607,7 @@ body {
     margin: 0.7rem;
 }
 /* end of feeds content */
-
-.post-btn {
+.post-btn {    
     position: fixed;
     bottom: 2rem;
     left: 68%;
@@ -585,7 +615,7 @@ body {
     padding: 1.5rem 1rem;
     background-color:#1aa1f5;
     color: #fff;
-    font-size: 2rem;
+    font-size: 2rem; 
     border: 0.1rem solid #1aa1f5;
     border-radius: 3rem;
     cursor: pointer;
