--- a/style.css
+++ b/style.css
@@ -15,11 +15,34 @@ body {
 }
 /* end of common styles */
 
+/* pages-navigation */
+.pages-navigation {
+	width: 100%;
+	background-color: orange;
+	opacity: 0.8;
+	position: fixed;
+	bottom: 0px;
+}
+.pages-navigation ul{
+	height: 30px;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	list-style: none;
+	color: blue;
+	font-size: 2rem;
+}
+.pages-navigation ul li:first-child {
+	color: black;
+}
+/* end of pages-navigation */
+
 /* main page */
 .main-page {
 	width: 100%;
 	height: 100vh;
-	display: grid;
+	/* display: grid; */
+	display: none;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: 1fr min-content;
 }
@@ -702,7 +725,7 @@ body {
 
 .post-btn {
 	position: fixed;
-	bottom: 2rem;
+	bottom: 5rem;
 	left: 68%;
 	width: 12rem;
 	padding: 1.5rem 1rem;
